Ensure URLs in collections don't overflow box

--- a/data/css/spesific.css
+++ b/data/css/spesific.css
@@ -80,3 +80,7 @@ slidey-button {
 .remove-header {
   margin-top: 10px;
 }
+
+.list-group-item-text {
+  word-break: break-all;
+}
